<resources>
    <string name="app_name">AlgebraBlade</string>
    <string name="hint_input_expression">在此输入要计算的表达式</string>
    <string name="text_calculate">计算</string>
    <string name="text_rest">结果：</string>
    <string name="get_value">取值</string>
    <string name="expression_text">表达式（x为变量）：</string>
    <string name="id_text">ID：</string>
    <string name="color_text">颜色：</string>
    <string name="set_domain_text">指定函数定义域</string>
    <string name="delta_text">步长:</string>
    <string name="lower_open_text">下限为开区间</string>
    <string name="upper_open_text">上限为开区间</string>
    <string name="action_clear">clear history</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_phone">This moiblephone is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--确认密码与密码不同-->
    <string name="mistake_password">The confirmation password is not identical</string>

</resources>
