<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/exp_input_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="在此输入函数表达式（x为变量）"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curve_color_text_view" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/curve_id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_text"
        app:layout_constraintBottom_toBottomOf="@+id/curve_color_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/curve_color_text_view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/color_text"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/curve_color_text_view"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/curve_color_text_view" />

    <TextView
        android:id="@+id/curve_color_text_view"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:gravity="center"
        tools:background="@android:color/holo_blue_light"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/is_domain_set_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_domain_text"
        app:layout_constraintBottom_toBottomOf="@+id/delta_input_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/delta_input_edit_text" />

    <CheckBox
        android:id="@+id/is_lower_open_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lower_open_text"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/is_upper_open_checkbox" />

    <CheckBox
        android:id="@+id/is_upper_open_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upper_open_text"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/delta_input_edit_text" />

    <EditText
        android:id="@+id/lower_input_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="在此输入下限"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/is_lower_open_check_box" />

    <EditText
        android:id="@+id/upper_input_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="在此输入上限"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/is_upper_open_checkbox" />

    <EditText
        android:id="@+id/delta_input_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="在此输入步长"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/exp_input_edit_text" />

</android.support.constraint.ConstraintLayout>